# kernelcoin

./: .gitignore  CNAME  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  README_OLD.md  SECURITY.md  configure.ac  index.html  mining_guide.md  wallet-tool.html
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bitcoin_qt.m4
build_msvc/: bitcoin_config.h  common.init.vcxproj
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
ci/test/: 00_setup_env_native_multiprocess.sh  06_script_a.sh  (+2 more)
contrib/: README.md  install_db4.sh
depends/: README.md  config.guess  config.sub  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  kernelcoin-cli.1  kernelcoin-qt.1  kernelcoin-tx.1  kernelcoin-wallet.1  kernelcoind.1  litecoin-tx.1  litecoin-wallet.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsseeds.h  clientversion.cpp  init.cpp  netaddress.h  pow.cpp  txdb.cpp  validation.cpp
test/: README.md  get_previous_releases.py
(+228 files in other folders)
